# sproingy

./: .gitignore  LICENSE  NOTES.md  README.md  build.zig  header-tweaks.patch  header-tweaks.sh
misc/: NOTES.md
rust/: Cargo.toml
rust/src/: axis.rs  main.rs
rust/src/dots/: mod.rs  shader.frag  shader.vert
src/: axis.zig  c.zig  cursor.zig  dots.zig  drawarrays.zig  gl.zig  glz.zig  main.zig  main2.zig  sdl2.zig  sim.zig  util.zig
src/core/: c.zig  core.zig  glz.zig  gtkz.zig  support.zig  util.zig
src/space/: dots.zig  staticPaintable.zig  view.zig
src/time/: cursor.zig  curve.zig  view.zig
src/util/: axis.zig  drag.zig  glz.zig  gtkz.zig  misc.zig  paint.zig
xoroshiro128-issue/: build.zig  main.zig
