[package]
name = "sproingy"
version = "0.1.0"
authors = ["Mike Hogye <stacktracer@gmail.com>"]
edition = "2018"

[dependencies.gdk]
version = "0.13.2"

[dependencies.gtk]
version = "0.9.2"
features = [ "v3_16" ]

[dependencies.glib]
version = "0.10.3"

[dependencies.gl]
version = "0.14.0"

[dependencies.epoxy]
version = "0.1.0"

[dependencies.shared_library]
version = "0.1.9"
